// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDataTableHeader does not render sort icons if sorting disabled 1`] = `
<DocumentFragment>
  <div>
    <span
      aria-label="Name"
      aria-pressed="false"
      role="button"
      tabindex="0"
    >
      Name
    </span>
  </div>
</DocumentFragment>
`;

exports[`BpkDataTableHeader renders sort icon with down icon selected 1`] = `
<DocumentFragment>
  <div>
    <span
      aria-label="Name"
      aria-pressed="true"
      role="button"
      tabindex="0"
    >
      Name
    </span>
    <div
      aria-hidden="true"
      class="bpk-data-table-column__sort-icons"
    >
      <svg
        class="bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.463 15.75h9.074a1.358 1.358 0 001.11-2.251l-4.354-4.77a1.53 1.53 0 00-2.184-.04l-4.718 4.77a1.357 1.357 0 001.072 2.291z"
        />
      </svg>
      <svg
        class="bpk-data-table-column__sort-icon--down bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16.537 8.25H7.463a1.358 1.358 0 00-1.11 2.251l4.354 4.77a1.53 1.53 0 002.184.04l4.718-4.77a1.357 1.357 0 00-1.072-2.291z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkDataTableHeader renders sort icon with up icon selected 1`] = `
<DocumentFragment>
  <div>
    <span
      aria-label="Name"
      aria-pressed="true"
      role="button"
      tabindex="0"
    >
      Name
    </span>
    <div
      aria-hidden="true"
      class="bpk-data-table-column__sort-icons"
    >
      <svg
        class="bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.463 15.75h9.074a1.358 1.358 0 001.11-2.251l-4.354-4.77a1.53 1.53 0 00-2.184-.04l-4.718 4.77a1.357 1.357 0 001.072 2.291z"
        />
      </svg>
      <svg
        class="bpk-data-table-column__sort-icon--down bpk-data-table-column__sort-icon bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16.537 8.25H7.463a1.358 1.358 0 00-1.11 2.251l4.354 4.77a1.53 1.53 0 002.184.04l4.718-4.77a1.357 1.357 0 00-1.072-2.291z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkDataTableHeader renders sort icons 1`] = `
<DocumentFragment>
  <div>
    <span
      aria-label="Name"
      aria-pressed="false"
      role="button"
      tabindex="0"
    >
      Name
    </span>
    <div
      aria-hidden="true"
      class="bpk-data-table-column__sort-icons"
    >
      <svg
        class="bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.463 15.75h9.074a1.358 1.358 0 001.11-2.251l-4.354-4.77a1.53 1.53 0 00-2.184-.04l-4.718 4.77a1.357 1.357 0 001.072 2.291z"
        />
      </svg>
      <svg
        class="bpk-data-table-column__sort-icon--down bpk-data-table-column__sort-icon bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16.537 8.25H7.463a1.358 1.358 0 00-1.11 2.251l4.354 4.77a1.53 1.53 0 002.184.04l4.718-4.77a1.357 1.357 0 00-1.072-2.291z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
